--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/Footer.xhtml
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/Footer.xhtml
@@ -12,6 +12,10 @@
                 <div class="container">
                     &copy; 2014, Allright reserved. <a href="#">Terms and Condition</a> | <a href="#">Privacy Policy</a> 
                     <div class="pull-right"> <a href="index.html">ECO-BIO.COM</a></div>
+                    <div class="fb-share-button" data-href="https://www.facebook.com/pages/Ecobio/1400495916880051" data-type="button_count" style="margin-left:10px;"></div>
+
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-related="jasoncosta" data-lang="en" data-size="large" data-count="none" style="padding-left: 10px;">Tweet</a>
+
                 </div>
             </div>
             <!-- JS Global Compulsory -->			
@@ -49,6 +53,26 @@
 
                 });
             </script>
+            
+            <script>(function(d, s, id) {
+                    var js, fjs = d.getElementsByTagName(s)[0];
+                    if (d.getElementById(id))
+                        return;
+                    js = d.createElement(s);
+                    js.id = id;
+                    js.src = "//connect.facebook.net/fr_FR/all.js#xfbml=1";
+                    fjs.parentNode.insertBefore(js, fjs);
+                }(document, 'script', 'facebook-jssdk'));</script>
+
+            <script>!function(d, s, id) {
+                    var js, fjs = d.getElementsByTagName(s)[0];
+                    if (!d.getElementById(id)) {
+                        js = d.createElement(s);
+                        js.id = id;
+                        js.src = "https://platform.twitter.com/widgets.js";
+                        fjs.parentNode.insertBefore(js, fjs);
+                    }
+                }(document, "script", "twitter-wjs");</script>
 
 
         </ui:composition>
