--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/Nav.xhtml
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/Nav.xhtml
@@ -8,7 +8,9 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:c="http://java.sun.com/jsp/jstl/core">
     <body>
+
         <ui:composition>
+
             <!-- topHeaderSection -->	
             <div class="topHeaderSection">		
                 <div class="header">	
@@ -25,8 +27,18 @@
                                     </p:commandLink>
                                 </c:otherwise>
                             </c:choose>
+                            <c:choose>
+                                <c:when test="#{managerUser.user.id != null}">
+                                    <h:form>
+                                        <p:commandButton id="deconnexion" action="#{managerUser.deconnexion()}" value="" styleClass="imageCroixMenuLogin" style="height:48px;"/>
+                                        <p:tooltip for="deconnexion" value="Déconnexion" showEffect="fade" hideEffect="fade" /> 
+                                    </h:form>
+                                </c:when>
+                                <c:otherwise>
+                                </c:otherwise>
+                            </c:choose>
+                        </h:form></div>              
 
-                        </h:form></div>
 
 
                     <div class="container">
@@ -104,18 +116,7 @@
                                         </li>
                                     </c:otherwise>
                                 </c:choose>
-                                <c:choose>
-                                    <c:when test="#{managerUser.user.id != null}">
-                                        <li class="menuLogin">
-                                            <h:form>
-                                                <h:commandLink action="monEspacePerso" value="Deconnexion" styleClass="menuLogin" />
-                                            </h:form>
-                                        </li>
-                                    </c:when>
-                                    <c:otherwise>
-
-                                    </c:otherwise>
-                                </c:choose>
+                               
 
                             </ul>                     
                         </div><!--/.nav-collapse -->
@@ -158,9 +159,19 @@
                         <ui:repeat value="#{currentCart.listArticle}" var="produit">
                             <label style="margin-left: 20px;" > #{produit.getProduit().nom} nombre : #{produit.getQuantite()} <h:commandButton styleClass="imagePoubelle"  action="#{currentCart.deleteProduit(produit.getProduit().id)}"  style="margin-left : 20px; height : 33px; width : 30px;" /></label> <br></br>
                         </ui:repeat>
+ 
+                    </div> <br></br><br></br><br></br>  
+             
+                        <c:choose>
+                            <c:when test="#{managerUser.user.id == null}">
+                                <p:commandLink styleClass="btn btn-default" id="modalDialogButton" value="Connexion" onclick= "dlgEspacePerso.show();" type="button"/>
+                            </c:when>
+                            <c:otherwise>
+                                <h:commandButton action="#{managerCommande.create(currentCart.listArticle,managerUser.user)}" value="Acheter les éléments de mon panier" styleClass="btn btnConnexion" />
+                            </c:otherwise>
+                        </c:choose>
+                </h:form>
 
-                    </div> <br></br><br></br><br></br>    
-                    <h:commandButton action="#{managerCommande.create(currentCart.listArticle,managerUser.user)}" value="Acheter les éléments de mon panier" styleClass="btn btnConnexion" /> </h:form>
             </p:dialog>
         </ui:composition>
     </body>
